--- a/style.css
+++ b/style.css
@@ -3,28 +3,67 @@
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&family=Lora:ital,wght@0,400..700;1,400..700&display=swap');
 
 body {
-    color: #808080 ;
-    background-color: #F5DEB3;
-    font-family: Lora;
-    font-size: 15px;
+    color: black;
+    background-color: #F8F8FF;
+    font-family: "Lora";
+    box-sizing: border-box;
 }
-
-ul{
+ 
+ul {
     display: flex;
     justify-content: space-between;
     list-style-type: none;
     align-items: center;
     padding: 16px;
 }
-
-header img{
-    width: 40%;
-    height: 55%px;
+ 
+a {
+    color:whitesmoke;
+    text-decoration: none;
+}
+ 
+header img {
+    width: 150px;
+    height: 150px;
     border-radius: 50%;
-    border: 30% solid transparent;
+    border: 2px solid transparent
+}
+ 
+.center {
+    text-align: center;
 }
 
-header img{
-    align-content: center;
-    align-items: center;
+
+
+
+
+
+.tz {
+  padding: 2px 40   px;
+}
+
+nav a:hover{
+    color: #D3D3D3;
+}
+
+p {
+    font-family: "Inconsolata";
+}
+
+nav a {
+    color: #363636;
+}
+
+
+header img{   
+    
+       object-fit:cover;        
+}
+
+h1{
+    text-align: center;
+}
+.Caixa_de_orçamento{
+   
+    text-align: center;
 }
